[tool.poetry]
name = "zem-maersk-gateway"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = "^2.0.0"
requests = "^2.32.5"
isort = "^7.0.0"
black = "^26.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
